--- a/ListApp/app/src/main/res/values/strings.xml
+++ b/ListApp/app/src/main/res/values/strings.xml
@@ -2,21 +2,83 @@
     <string name="app_name">List App</string>
 
     <string-array name="items">
-        <item>banana</item>
-        <item>peach</item>
-        <item>tomato</item>
+        <item>0:00</item>
+        <item>1:00</item>
+        <item>3:00</item>
+        <item>4:00</item>
+        <item>5:00</item>
+        <item>6:00</item>
+        <item>7:00</item>
+        <item>8:00</item>
+        <item>9:00</item>
+        <item>10:00</item>
+        <item>11:00</item>
+        <item>12:00</item>
+        <item>13:00</item>
+        <item>14:00</item>
+        <item>15:00</item>
+        <item>16:00</item>
+        <item>17:00</item>
+        <item>18:00</item>
+        <item>19:00</item>
+        <item>20:00</item>
+        <item>21:00</item>
+        <item>22:00</item>
+        <item>23:00</item>
     </string-array>
 
     <string-array name="prices">
-        <item>$0.99</item>
-        <item>$1.49</item>
-        <item>$0.89</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
     </string-array>
 
     <string-array name="description">
-        <item>Fresh banana from Vietnam</item>
-        <item>Fresh peaches from Georgia</item>
-        <item>Fresh tomatoes from Vietnam</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
+        <item>Place Holder</item>
     </string-array>
 
 </resources>
